1.8.0/_sources/reference_cmd/dipy_align_affine.rst.txt

=================
dipy_align_affine
=================

Usage
-----

 dipy_align_affine [-h] [--transform str] [--nbins int] [--sampling_prop int] [--metric str] [--level_iters [int ...]] [--sigmas [float ...]] [--factors [float ...]] [--progressive]
                     [--save_metric] [--out_dir str] [--out_moved str] [--out_affine str] [--out_quality str]
                     static_image_files moving_image_files

Positional Arguments
--------------------


  static_image_files    Path to the static image file. 
  moving_image_files    Path to the moving image file. 

Optional Arguments
------------------


  -h, --help            show this help message and exit
  --transform str       com: center of mass, trans: translation, rigid: rigid body, rigid_isoscaling: rigid body + isotropic scaling, rigid_scaling: rigid body + scaling, affine: full affine including translation, rotation, shearing and scaling. 
  --nbins int           Number of bins to discretize the joint and marginal PDF. 
  --sampling_prop int   Number ([0-100]) of voxels for calculating the PDF.  'None' implies all voxels. 
  --metric str          Similarity metric for gathering mutual information). 
  --level_iters [int ...]
                        The number of iterations at each scale of the scale space.  `level_iters[0]` corresponds to the coarsest scale,  `level_iters[-1]` the finest, where n is the length of the   sequence. 
  --sigmas [float ...]  Custom smoothing parameter to build the scale space (one parameter  for each scale). 
  --factors [float ...]
                        Custom scale factors to build the scale space (one factor for each  scale). 
  --progressive         Enable/Disable the progressive registration. 
  --save_metric         If true, quality assessment metric are saved in 'quality_metric.txt'. 

Output Arguments(Optional)
--------------------------


  --out_dir str         Directory to save the transformed image and the affine matrix  (default current directory). 
  --out_moved str       Name for the saved transformed image. 
  --out_affine str      Name for the saved affine matrix. 
  --out_quality str     Name of the file containing the saved quality  metric.

References
----------

 
Garyfallidis, E., M. Brett, B. Amirbekian, A. Rokem, S. Van Der Walt, M. Descoteaux, and I. Nimmo-Smith. Dipy, a library for the analysis of diffusion MRI data. Frontiers in Neuroinformatics, 1-18, 2014.