1.10.0/_sources/reference_cmd/dipy_align_affine.rst.txt
.. dipy_align_affine:

=================
dipy_align_affine
=================

Usage
-----

.. code-block:: bash

    dipy_align_affine [OPTIONS] static_image_files moving_image_files

Input Parameters
----------------

* ``static_image_files``

  Path to the static image file.
  

* ``moving_image_files``

  Path to the moving image file.
  

General Options
---------------

* ``--transform``

  ``'com'``: center of mass; ``'trans'``: translation; ``'rigid'``:
  rigid body; ``'rigid_isoscaling'``: rigid body + isotropic scaling,
  ``'rigid_scaling'``: rigid body + scaling; ``'affine'``: full affine
  including translation, rotation, shearing and scaling.
  

* ``--nbins``

  Number of bins to discretize the joint and marginal PDF.
  

* ``--sampling_prop``

  Number ([0-100]) of voxels for calculating the PDF. None implies all
  voxels.
  

* ``--metric``

  Similarity metric for gathering mutual information.
  

* ``--level_iters``

  The number of iterations at each scale of the scale space.
  `level_iters[0]` corresponds to the coarsest scale,
  `level_iters[-1]` the finest, where n is the length of the
  sequence.
  

* ``--sigmas``

  Custom smoothing parameter to build the scale space (one parameter
   for each scale).
  

* ``--factors``

  Custom scale factors to build the scale space (one factor for each
   scale).
  

* ``--progressive``

  Enable/Disable the progressive registration.
  

* ``--save_metric``

  If true, quality assessment metric are saved in
  'quality_metric.txt'.
  

* ``--static_vol_idx``

  1D array representing indices of ``axis=-1`` of a 4D
  `static` input volume. From the command line use something like
  `3 4 5 6`. From script use something like `[3, 4, 5, 6]`. This
  input is required for 4D volumes.
  

* ``--moving_vol_idx``

  1D array representing indices of ``axis=-1`` of a 4D
  `moving` input volume. From the command line use something like
  `3 4 5 6`. From script use something like `[3, 4, 5, 6]`. This
  input is required for 4D volumes.
  

Output Options
--------------

* ``--out_dir``

  Directory to save the transformed image and the affine matrix
   (default current directory).
  

* ``--out_moved``

  Name for the saved transformed image.
  

* ``--out_affine``

  Name for the saved affine matrix.
  

* ``--out_quality``

  Name of the file containing the saved quality metric.

References
----------

Garyfallidis, E., M. Brett, B. Amirbekian, A. Rokem, S. Van Der Walt, M. Descoteaux, and I. Nimmo-Smith. Dipy, a library for the analysis of diffusion MRI data. Frontiers in Neuroinformatics, 1-18, 2014.